Fixes text overflow

--- a/frontend/css/user_detail.css
+++ b/frontend/css/user_detail.css
@@ -239,7 +239,7 @@ section#plan main {
 }
 
 .plan-detail {
-  flex: 0 0 auto;
+  flex: 0 1 auto;
   padding: 0;
   display: flex;
   align-items: center;
